# GameClub-prototype

./: CMakeLists.txt  README.md
game_club/: Source.cpp
include/: Base.h  Club.h  EventDistributor.h  Table.h
include/Analyzers/: Analyzer.h  ClubAnalyzer.h
include/Events/: Event.h  EventPattern.h  InEventBody.h  InEventBodyUser.h  InEventBodyUserTable.h  IncomingEvent.h  OutEventBodyError.h  OutEventBodyUser.h  OutEventBodyUserTable.h  OutcomingEvent.h
include/InputParsers/: FileParser.h  InputParser.h
include/Observer/: EventDispatcher.h
include/Subscribers/: Subscriber.h  SubscriberBase.h
src/: Base.cpp  Club.cpp  EventDistributor.cpp  Table.cpp  main.cpp
src/Analyzers/: Analyzer.cpp  ClubAnalyzer.cpp  ClubAnalzer.cpp
src/Events/: Event.cpp  EventPattern.cpp  InEventBody.cpp  InEventBodyUser.cpp  InEventBodyUserTable.cpp  IncomingEvent.cpp  OutcomingEvent.cpp
src/InputParsers/: FileParser.cpp
src/Observer/: EventDispatcher.cpp
src/Subscribers/: SubscriberBase.cpp
src/Subsribers/: SubscriberBase.cpp
tests/: CMakeLists.txt  unit_test.cpp
tests/inputs/: test2.txt  test3.txt  test4.txt  test5.txt
tests/outputs/: test3.txt  test4.txt  test5.txt
tests/tmp/: tmp_result.txt
